--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         </ul>
     </div>
     <div class="section-1">
+        <div class="ss1-left">
+            <h1 class="title"></h1>
+            <p class="subtext"></p>
+            <button>Sign up</button>
+        </div>
+        <div class="ss1-right">this is a placeholder for an image</div>
     </div>
     <div class="section 2"></div>
     <div class="section 3"></div>
