--- a/index.html
+++ b/index.html
@@ -16,14 +16,34 @@
         </ul>
     </div>
     <div class="section-1">
-        <div class="ss1-left">
+        <div class="s1-left">
             <h1 class="title"></h1>
             <p class="subtext"></p>
             <button>Sign up</button>
         </div>
-        <div class="ss1-right">this is a placeholder for an image</div>
+        <div class="s1-right">this is a placeholder for an image</div>
     </div>
-    <div class="section 2"></div>
+    <div class="section 2">
+        <h1 class="title"></h1>
+        <div class="container">
+            <div class="info">
+                <div class="icon"></div>
+                <p class="subtext"></p>
+            </div>
+            <div class="info">
+                <div class="icon"></div>
+                <p class="subtext"></p>
+            </div>
+            <div class="info">
+                <div class="icon"></div>
+                <p class="subtext"></p>
+            </div>
+            <div class="info">
+                <div class="icon"></div>
+                <p class="subtext"></p>
+            </div>
+        </div>
+    </div>
     <div class="section 3"></div>
     <div class="section 4"></div>
     <div class="footer">
