--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
             </div>
         </div>
     </div>
-    <div class="section 3"></div>
+    <div class="section 3">
+        <p class="quote"></p>
+        <p class="quotee"></p>
+    </div>
     <div class="section 4"></div>
     <div class="footer">
         <p>Copyright © The Odin Project 2021</p>
