Change "title" classes to "heading"

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     </div>
     <div class="section-1">
         <div class="s1-left">
-            <h1 class="title"></h1>
+            <h1 class="heading"></h1>
             <p class="subtext"></p>
             <button>Sign up</button>
         </div>
         <div class="s1-right">this is a placeholder for an image</div>
     </div>
     <div class="section 2">
-        <h2 class="title"></h2>
+        <h2 class="heading"></h2>
         <div class="container">
             <div class="info">
                 <div class="icon"></div>
