--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="header">
         <h1>Header Logo</h1>
         <ul class="h-links">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+            <li><a>header link one</a></li>
+            <li><a>header link two</a></li>
+            <li><a>header link three</a></li>
         </ul>
     </div>
     <div class="section-1">
