Add CSS for section-1 and button styling - Style .section-1 with background color, flex layout, padding, and gap - Style .s1-left with white text color - Set font size for .section-1 .header and .section-1 .subtext - Style .s1-right with background color, white text, and center alignment - Style button with border-radius, background color, text color, padding, font size, font weight, and margin

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </div>
     <div class="section-1">
         <div class="s1-left">
-            <h1 class="heading"></h1>
-            <p class="subtext"></p>
+            <h1 class="heading">This website is awesome</h1>
+            <p class="subtext">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos repudiandae, facilis fugiat commodi error natus, debitis amet quod tempora molestiae magni quos minima perspiciatis eum minus, excepturi consectetur deserunt vitae?</p>
             <button>Sign up</button>
         </div>
         <div class="s1-right">this is a placeholder for an image</div>
