Add CSS for section-2 styling and update HTML - Add hyphen to section classes in HTML - Style .section-2 with white background, centered text, and padding - Style .section-2 .heading with color, font size, font weight, and padding - Style .section-2 .container with flex layout, center alignment, and gap - Style .section-2 .icon with background color, height, width, border, and border-radius - Style .section-2 .subtext with color, width, and margin

--- a/index.html
+++ b/index.html
@@ -23,32 +23,32 @@
         </div>
         <div class="s1-right">this is a placeholder for an image</div>
     </div>
-    <div class="section 2">
-        <h2 class="heading"></h2>
+    <div class="section-2">
+        <h2 class="heading">Some random information.</h2>
         <div class="container">
             <div class="info">
                 <div class="icon"></div>
-                <p class="subtext"></p>
+                <p class="subtext">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt sapiente corporis velit eum numquam, possimus, similique sed inventore consequuntur quod distinctio nam ducimus doloribus, quae laudantium. Impedit voluptate libero unde?</p>
             </div>
             <div class="info">
                 <div class="icon"></div>
-                <p class="subtext"></p>
+                <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam modi, sint temporibus architecto error ea excepturi iusto consectetur praesentium nesciunt, fuga ad impedit soluta obcaecati dolorem deleniti. Eveniet, animi illum.</p>
             </div>
             <div class="info">
                 <div class="icon"></div>
-                <p class="subtext"></p>
+                <p class="subtext">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse quasi quaerat animi nemo quo illo, ducimus nam reprehenderit magnam totam doloribus odit nostrum rerum omnis repellat exercitationem voluptatem possimus. Aut!</p>
             </div>
             <div class="info">
                 <div class="icon"></div>
-                <p class="subtext"></p>
+                <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ipsam molestiae enim, amet, alias ab ad ratione quisquam sapiente illum, eos dolore eius cum! Aut qui accusantium rerum dolorum distinctio!</p>
             </div>
         </div>
     </div>
-    <div class="section 3">
+    <div class="section-3">
         <p class="quote"></p>
         <p class="quotee"></p>
     </div>
-    <div class="section 4">
+    <div class="section-4">
         <div class="call">
             <div class="left">
                 <h3 class="heading"></h3>
