Add CSS for section-3 styling - Style .section-3 with light gray background and padding - Style .quote with dark text color, font size, font weight, italic style, and margin - Style .quotee with dark text color, font size, bold font weight, and right-aligned text - Change side padding to 256px for all sections - Add lorem ipsum content to containers for placeholder text

--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
         <div class="container">
             <div class="info">
                 <div class="icon"></div>
-                <p class="subtext">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt sapiente corporis velit eum numquam, possimus, similique sed inventore consequuntur quod distinctio nam ducimus doloribus, quae laudantium. Impedit voluptate libero unde?</p>
+                <p class="subtext">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
             </div>
             <div class="info">
                 <div class="icon"></div>
-                <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam modi, sint temporibus architecto error ea excepturi iusto consectetur praesentium nesciunt, fuga ad impedit soluta obcaecati dolorem deleniti. Eveniet, animi illum.</p>
+                <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="info">
                 <div class="icon"></div>
-                <p class="subtext">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse quasi quaerat animi nemo quo illo, ducimus nam reprehenderit magnam totam doloribus odit nostrum rerum omnis repellat exercitationem voluptatem possimus. Aut!</p>
+                <p class="subtext">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="info">
                 <div class="icon"></div>
-                <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ipsam molestiae enim, amet, alias ab ad ratione quisquam sapiente illum, eos dolore eius cum! Aut qui accusantium rerum dolorum distinctio!</p>
+                <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
         </div>
     </div>
     <div class="section-3">
-        <p class="quote"></p>
-        <p class="quotee"></p>
+        <p class="quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum vel corporis sapiente aut porro doloribus dolor nam cumque architecto modi quod vitae, nesciunt quam repellendus, reiciendis nemo quos voluptate voluptatum?</p>
+        <p class="quotee">- Thor, God of Thunder</p>
     </div>
     <div class="section-4">
         <div class="call">
