--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         </ul>
     </div>
     <div class="section-1">
-        <div class="s1-left">
+        <div class="left">
             <h1 class="heading">This website is awesome</h1>
             <p class="subtext">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos repudiandae, facilis fugiat commodi error natus, debitis amet quod tempora molestiae magni quos minima perspiciatis eum minus, excepturi consectetur deserunt vitae?</p>
             <button>Sign up</button>
         </div>
-        <div class="s1-right">this is a placeholder for an image</div>
+        <div class="right">this is a placeholder for an image</div>
     </div>
     <div class="section-2">
         <h2 class="heading">Some random information.</h2>
@@ -51,8 +51,8 @@
     <div class="section-4">
         <div class="call">
             <div class="left">
-                <h3 class="heading"></h3>
-                <p class="subtext"></p>
+                <h3 class="heading">Call to Action! It's Time!</h3>
+                <p class="subtext">Sign up for our product by clicking that button right over there!</p>
             </div>
             <div class="right">
                 <button>Sign up</button>
